crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_raw_pointer_write_drop_type.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
UNSUPPORTED overwrite_drop_type
  raw pointer assignment for types with Drop is unsupported: Droppy
  src/main.rs:10:5: 10:7
PASS main
  all assertions discharged

stderr:
