crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_raw_pointer_write_missing_points_to.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
FAIL rejects_raw_pointer_write_missing_points_to
  raw pointer dereference requires a PointsTo resource
  src/main.rs:5:9: 5:18
PASS main
  all assertions discharged

stderr:
