crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_recursive_lemma_without_decrease.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  lemma `bad` body: recursive lemma call does not decrease the inductive parameter(s)
  no-location

stderr:
