crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_recursive_lemma_without_match.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  lemma `bad` body: recursive lemmas must use `match` as the only top-level statement
  no-location

stderr:
