crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_recursive_pure_fn_without_match.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  pure function `len` body: recursive pure functions must use `match` at the top level
  no-location

stderr:
