crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_result_in_req.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED bad
  `result` is only supported in //@ ens predicates
  src/main.rs:2:1: 2:22

stderr:
