crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_reversed_witness_in_assert.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  spec bindings in //@ assert must have the form `?x == value` at the top level
  src/main.rs:2:1: 2:23

stderr:
