crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_safe_standalone_raw_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  function contract declaration `raw_safe` raw contracts are only supported on unsafe functions
  no-location

stderr:
